env.Variables edited on config.json

--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
     "username": process.env.DB_USER,
     "password": process.env.DB_PASS,
     "database": process.env.DB_NAME,
-    "host": process.env.DB_HOST,
+    "host": process.env.JAWSDB_MARIA_URL,
     "dialect": "mysql"
   },
   "test": {
@@ -17,7 +17,7 @@
     "username": process.env.DB_USER,
     "password": process.env.DB_PASS,
     "database": process.env.DB_NAME,
-    "host": process.env.DB_HOST,
+    "host": process.env.JAWSDB_MARIA_URL,
     "dialect": "mysql"
   }
 }
