--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Itapeva1998",
+    "password": "CHLwlgh1538!",
     "database": "login_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
