--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "CHLwlgh1538!",
-    "database": "login_db",
+    "password": "",
+    "database": "",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
